chore(parser): use explicit list collectors